# OpenGLRenderer

./: CMakeLists.txt
include/: camera.h  mesh.h  model.h  shader.h  stb_image.h  util_funcs.h
include/assimp/: revision.h
include/glad/: glad.h
src/: glad.c  main.cpp  old.cpp  shader.frag  shader.vert
src/shaders/: light_cube.frag  lighting.frag  lighting.vert  shader.frag  shader.vert
